[project]
name = "pykx-dbapi"
version = "0.1.0"
description = "PEP 249 (DB-API 2.0) wrapper around pykx IPC connections — query kdb+/q from marimo notebooks and other DB-API consumers"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "JP Armstrong", email = "jp@armstrong.sh" }
]
requires-python = ">=3.9"
dependencies = ["pykx", "pyarrow"]

[project.urls]
Repository = "https://github.com/jparmstrong/pykx-dbapi"

[dependency-groups]
dev = [
    "pytest",
    "pandas",
    "polars",
    "marimo",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
